--- a/roles/install_packages/tasks/main.yml
+++ b/roles/install_packages/tasks/main.yml
@@ -2,5 +2,5 @@
 - name: Install yum-plugin-priorities
   yum: name=yum-plugin-priorities state=installed 
 
-- name: Install python-rdomanager-oscplugin
-  yum: name=python-rdomanager-oscplugin state=installed 
+- name: Install TripleO CLI
+  yum: name=python-tripleoclient state=installed 
