added chdir to upload images step

--- a/roles/deploy_undercloud/tasks/main.yml
+++ b/roles/deploy_undercloud/tasks/main.yml
@@ -15,4 +15,6 @@
   shell: openstack overcloud image build --all
 
 - name: Upload images
-  shell: cd /home/stack/; source stackrc; openstack overcloud image upload
+  shell: source /home/stack/stackrc; openstack overcloud image upload
+  args:
+    chdir: /home/stack
