--- a/roles/enable_repos/tasks/main.yml
+++ b/roles/enable_repos/tasks/main.yml
@@ -5,14 +5,5 @@
 - name: Enable last known good RDO Trunk Delorean repository
   shell: curl -o /etc/yum.repos.d/delorean.repo http://trunk.rdoproject.org/centos7-liberty/current-passed-ci/delorean.repo
 
-- name: Enable latest RDO Trunk Delorean repository
-  shell: curl -o /etc/yum.repos.d/delorean-current.repo http://trunk.rdoproject.org/centos7-liberty/current/delorean.repo
-
-- name: Rename delorean-current
-  shell: sed -i 's/\[delorean\]/\[delorean-current\]/' /etc/yum.repos.d/delorean-current.repo
-
-- name: Include packages
-  shell: printf "\nincludepkgs=diskimage-builder,openstack-heat,instack,instack-undercloud,openstack-ironic,openstack-ironic-inspector,os-cloud-config,os-net-config,python-ironic-inspector-client,python-tripleoclient,tripleo-common,openstack-tripleo-heat-templates,openstack-tripleo-image-elements,openstack-tuskar-ui-extras,openstack-puppet-modules\n" >> /etc/yum.repos.d/delorean-current.repo
-
 - name: Enable the Delorean Deps repository
-  shell: sudo curl -o /etc/yum.repos.d/delorean-deps.repo http://trunk.rdoproject.org/centos7-liberty/delorean-deps.repo
+  shell: curl -o /etc/yum.repos.d/delorean-deps.repo http://trunk.rdoproject.org/centos7-liberty/delorean-deps.repo
