--- a/roles/deploy_undercloud/tasks/main.yml
+++ b/roles/deploy_undercloud/tasks/main.yml
@@ -11,7 +11,9 @@
 
 - name: Build images
   environment:
-    DIB_YUM_REPO_CONF: "/etc/yum.repos.d/delorean.repo /etc/yum.repos.d/delorean-deps.repo"
+    USE_DELOREAN_TRUNK: 1
+    DELOREAN_TRUNK_REPO: "http://trunk.rdoproject.org/liberty/centos7/current-passed-ci/"
+    DELOREAN_REPO_FILE: "/etc/yum.repos.d/delorean.repo"
   shell: openstack overcloud image build --all
 
 - name: Upload images
